--- a/templates/error.html
+++ b/templates/error.html
@@ -10,9 +10,9 @@
 
     <title>Error</title>
   </head>
-  <body>
+  <body style="background-color: skyblue">
 
-<div style="margin:1% 49%" class="container"><strong>No Text</strong></div>
+  <div style="margin:1% 49%" class="container"><h1><strong>No Text</strong></h1></div>
 <div class="alert alert-danger d-flex align-items-center" role="alert">
   <div><strong>Error! </strong>Nothing To Analyze!!</div>
 </div>
