--- a/templates/index.html
+++ b/templates/index.html
@@ -14,20 +14,20 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Rcube Text Analzyer Tool</a>
+    <a class="navbar-brand" href="/">Rcube Text Analzyer Tool</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">About Us</a>
+          <a class="nav-link active" aria-current="page" href="/about">About Us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#" >Contact Us</a>
+          <a class="nav-link active" aria-current="page" href="/contact" >Contact Us</a>
         </li>
       </ul>
       <form class="d-flex">
@@ -48,7 +48,7 @@
   <form action="/analyze" method="post">
     {% csrf_token %}
 <div class="mb-3">
-  <label for="exampleFormControlTextarea1" class="form-label">Enter Your Text To Analzye It.</label>
+  <label for="exampleFormControlTextarea1" class="form-label"><h1>Enter Your Text To Analzye It.</h1></label>
   <textarea name="text" class="form-control" id="exampleFormControlTextarea1" rows="10"></textarea>
 </div>
     <strong>Please select an option to analyze your text.</strong>
